--- a/requirements.txt
+++ b/requirements.txt
@@ -62,8 +62,8 @@ nltk==3.8.1
 nodeenv==1.8.0
 numexpr==2.8.4
 numpy==1.25.1
-openai==0.27.8
-openapi-schema-pydantic==1.2.4
+openai==0.28
+openapi-schema-pydantic>=1.2.4
 packaging==23.1
 pandas==2.0.3
 parso==0.8.3
